--- a/test-site/index.html
+++ b/test-site/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test Page</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>This is a test page</h1>
+    <img src="images/firefox-icon.png" alt="Firefox logo: flaming fox wrapping the world" />
     
 </body>
 </html>
