week 1 page Layout Review

--- a/week01/holygrail.html
+++ b/week01/holygrail.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles/holygrail.css">
 </head>
 <body>
-    
+    <header>
+        <h1 contenteditable>Header</h1>
+    </header>
+    <nav>
+        Main Navigation
+    </nav>
+    <!-- <div class="left-sidebar" contenteditable>Left Sidebar</div> -->
+    <main contenteditable>Main Content Area</main>
+    <div class="right-sidebar" contenteditable>Right Sidebar</div>
+    <footer contenteditable>Footer Content</footer>
 </body>
 </html>
