Added last modified

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="scripts/getDates.js" defer></script>
 </head>
 <body>
     <header>
@@ -46,7 +47,7 @@
     </main>
     <footer>
         <p>© 1492 Trevor Hegstrom USA</p>
-        <p id="lastModified">last modified quite recently</p>
+        <p id="lastModified">Last Modified: </p>
     </footer>
 </body>
 </html>
