added wire frame to chamber site

--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -54,6 +54,8 @@
             <li class="dancing">Dancing Script will be used for section headings.</li>
             <li class="kalam">Kalam will be used for most of the other text.</li>
         </ul>
+        <h2>Wireframe</h2>
+        <img src="images/wire-frame.jpg" alt="Wireframe of the Chamber of Commerce Website" id="wire-frame">
 
 
 
