--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <nav>
         <ul>
             <li><a href="#" class="active">Home</a></li>
-            <li><a href="week01/chamber-site-plan.html">Chamber</a></li>
-            <li><a href="#">Site Plan</a></li>
+            <li><a href="#">Chamber</a></li>
+            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="#">Form</a></li>
         </ul>
         
