--- a/week01/chamber-site-plan.html
+++ b/week01/chamber-site-plan.html
@@ -14,7 +14,7 @@
     </head>
 <body>
     <header>
-        <h1>Red Rock City Chamber of Commerce Website Outline</h1>
+        <h1>Red Rock City Chamber of Commerce Site Plan</h1>
     </header>
     <main>
         <h2>Site Name:</h2>
