Week 2 Design Principles activity

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <section class="card">
                 <h2>Learning Activities</h2>
                 <ul>
-                    <li><a href="">item 1</a></li>
-                    <li><a href="">item 2</a></li>
+                    <li><a href="week01/chamber-site-plan.html">Week 1 Chamber Site Plan</a></li>
+                    <li><a href="week02/design.html">Week 2 Design Principles</a></li>
                 </ul>
             </section>
             <section class="card">
@@ -46,7 +46,7 @@
         </div>
     </main>
     <footer>
-        <p>© 1492 Trevor Hegstrom USA</p>
+        <p>©2024 Trevor Hegstrom USA</p>
         <p id="lastModified">Last Modified: </p>
     </footer>
 </body>
