--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="scripts/getDates.js" defer></script>
     <link rel="icon" href="favicon.ico">
+    <meta property="og:title" content="Trevor Hegstrom - WDD 230 - Web Frontend Development">
+    <meta property="og:url" content="https://trevheg.github.io/wdd230/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/SJ_skyline_at_night_horizontal.jpg/799px-SJ_skyline_at_night_horizontal.jpg">
+
 </head>
 <body>
     <header>
