--- a/week02/bom.html
+++ b/week02/bom.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles/bom.css">
-    <script src="scripts/bom.js"></script>
+    <script src="scripts/bom.js" defer></script>
 </head>
 <body>
     <h1>📖 Book of Mormon - Top 10</h1>
