--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <li><a href="week01/chamber-site-plan.html">Week 1 Chamber Site Plan</a></li>
                     <li><a href="week02/design.html">Week 2 Design Principles</a></li>
                     <li><a href="https://codepen.io/Trevor-Hegstrom/pen/eYaOeZL">Week 2 Responsive Hamburger Menu</a></li>
+                    <li><a href="week02/bom.html"></a></li>
                 </ul>
             </section>
             <section class="card">
