--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Trevor Hegstrom - WDD 230 - Web Frontend Development</title>
     <meta name="description" content="WDD 230 - Web Frontend Development - Trevor Hegstrom - course assignment portal">
     <meta name="author" content="Trevor Hegstrom">
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
