--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
     <script src="scripts/getDates.js" defer></script>
+    <script src="scripts/responsiveMenu.js" defer></script>
     <link rel="icon" href="favicon.ico">
     <meta property="og:title" content="Trevor Hegstrom - WDD 230 - Web Frontend Development">
     <meta property="og:url" content="https://trevheg.github.io/wdd230/index.html">
@@ -26,7 +27,11 @@
         <img src="images/profile-picture.jpg" alt="A photo of me at the Utah Renaissance Faire" title="A photo of Trevor at the Utah Renaissance Faire">
         <span>Trevor Hegstrom</span>
     </header>
-    <nav>
+    <div id="mode">
+        🕶️
+    </div>
+    <button id="menu" title="hamburger menu"></button>
+    <nav class="navigation">
         <ul>
             <li><a href="#" class="active">Home</a></li>
             <li><a href="#">Chamber</a></li>
