--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <nav class="navigation">
         <ul>
             <li><a href="#" class="active">Home</a></li>
-            <li><a href="#">Chamber</a></li>
+            <li><a href="chamber/index.html">Chamber</a></li>
             <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
             <li><a href="#">Form</a></li>
         </ul>
