added expanding menu to rrccc

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -27,6 +27,7 @@
     <header>
         <span>Red Rock City Chamber of Commerce</span>
     </header>
+    <button id="menu" title="hamburger menu"></button>
     <nav class="navigation">
         <ul>
             <li><a href="#">Home</a></li>
