--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,11 +21,11 @@
     <meta property="og:title" content="Red Rock City Chamber of Commerce">
     <meta property="og:url" content="https://trevheg.github.io/wdd230/chamber/index.html">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/a/a8/Dunnottar_Castle_2.jpg">
+    <meta property="og:image" content="images/Dunnottar_Castle_2.jpg">
 </head>
 <body>
     <header>
-        <span>Red Rock City Chamber of Commerce</span>
+        <span><h1>Red Rock City Chamber of Commerce</h1></span>
     </header>
     <button id="menu" title="hamburger menu"></button>
     <nav class="navigation">
