--- a/index.html
+++ b/index.html
@@ -46,10 +46,11 @@
             <section class="card">
                 <h2>Learning Activities</h2>
                 <ul>
-                    <li><a href="week01/chamber-site-plan.html">Week 1 Chamber Site Plan</a></li>
-                    <li><a href="week02/design.html">Week 2 Design Principles</a></li>
-                    <li><a href="https://codepen.io/Trevor-Hegstrom/pen/eYaOeZL">Week 2 Responsive Hamburger Menu</a></li>
-                    <li><a href="week02/bom.html">Week 2 BOM</a></li>
+                    <li>Week 1 <a href="week01/chamber-site-plan.html">Chamber Site Plan</a></li>
+                    <li>Week 2 <a href="week02/design.html">Design Principles</a></li>
+                    <li>Week 2 <a href="https://codepen.io/Trevor-Hegstrom/pen/eYaOeZL">Responsive Hamburger Menu</a></li>
+                    <li>Week 2 <a href="week02/bom.html">BOM</a></li>
+                    <li>Week 3 <a href="week03/images/landscape.webp">WebP</a></li>
                 </ul>
             </section>
             <section class="card">
