--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
                     <li>Week 2 <a href="https://codepen.io/Trevor-Hegstrom/pen/eYaOeZL">Responsive Hamburger Menu</a></li>
                     <li>Week 2 <a href="week02/bom.html">BOM</a></li>
                     <li>Week 3 <a href="week03/images/landscape.webp">WebP</a></li>
+                    <li>Week 3 <a href="week03/lazyload.html">Lazy Loading</a></li>
                 </ul>
             </section>
             <section class="card">
