--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <header>
-        <img src="images/profile-picture.jpg" alt="A photo of me at the Utah Renaissance Faire" title="A photo of Trevor at the Utah Renaissance Faire">
+        <img src="images/profile-picture.webp" alt="A photo of me at the Utah Renaissance Faire" title="A photo of Trevor at the Utah Renaissance Faire">
         <span>Trevor Hegstrom</span>
     </header>
     <div id="mode">
@@ -41,6 +41,17 @@
         
     </nav>
     <main>
+        <div class="hero">
+            <picture class="hero-image">
+                <source srcset="images/01-Oakland-Temple-Exterior-small.webp" media="(max-width: 400px)">
+                <source srcset="images/01-Oakland-Temple-Exterior-medium.webp" media="(max-width: 960px)">
+                <img src="images/01-Oakland-Temple-Exterior-2236889.webp" alt="Oakland Temple">
+            </picture>
+            <div class="hero-label">
+                <p>Oakland, California Temple</p>
+            </div>
+
+        </div>
         <h1>WDD 230: Web Frontend Development</h1>
         <div class="sections">
             <section class="card">
@@ -52,6 +63,7 @@
                     <li>Week 2 <a href="week02/bom.html">BOM</a></li>
                     <li>Week 3 <a href="week03/images/landscape.webp">WebP</a></li>
                     <li>Week 3 <a href="week03/lazyload.html">Lazy Loading</a></li>
+                    <li>Week 3 <a href="week03/responsive-images.html">Responsive Images</a></li>
                 </ul>
             </section>
             <section class="card">
