--- a/week03/responsive-images.html
+++ b/week03/responsive-images.html
@@ -7,6 +7,12 @@
     <link rel="stylesheet" href="styles/responsive-images.css">
 </head>
 <body>
-    
+    <div class="hero">
+      <picture>
+        <source srcset="images/hero-small.webp" media="(max-width: 500px)">
+        <source srcset="images/hero-medium.webp" media="(max-width: 1000px)">
+        <img src="images/hero-large.webp" alt="Oakland Temple at Night" width="1500" height="750">
+      </picture>
+    </div>
 </body>
 </html>
