fixed stylesheet stuff

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -3,31 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Trevor Hegstrom - WDD 230 - Web Frontend Development</title>
-    <meta name="description" content="WDD 230 - Web Frontend Development - Trevor Hegstrom - course assignment portal">
+    <title>Red Rock City Chamber of Commerce</title>
+    <meta name="description" content="WDD 230 - Web Frontend Development - Trevor Hegstrom - Chamber of Commerce">
     <meta name="author" content="Trevor Hegstrom">
-    <!-- <link rel="stylesheet" href="styles/normalize.css"> -->
+    <link rel="stylesheet" href="styles/normalize.css">
     <link rel="stylesheet" href="styles/base.css">
     <link rel="stylesheet" href="styles/larger.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@300;400;700&display=swap" rel="stylesheet">
+    
     <script src="scripts/getDates.js" defer></script>
     <script src="scripts/responsiveMenu.js" defer></script>
-    <!-- <script src="scripts/visits.js" defer></script> -->
     <script src="scripts/lastVisit.js" defer></script>
-    <link rel="icon" href="favicon.ico">
-    <meta property="og:title" content="Trevor Hegstrom - WDD 230 - Web Frontend Development">
-    <meta property="og:url" content="https://trevheg.github.io/wdd230/index.html">
-    <meta property="og:type" content="website">
-    <meta property="og:image" content="https://upload.wikimedia.org/wikipedia/commons/thumb/8/85/SJ_skyline_at_night_horizontal.jpg/799px-SJ_skyline_at_night_horizontal.jpg">
 
+    <link rel="icon" href="images/favicon.ico">
+    <meta property="og:title" content="Red Rock City Chamber of Commerce">
+    <meta property="og:url" content="https://trevheg.github.io/wdd230/chamber/index.html">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="images/Dunnottar_Castle_2.jpg">
 </head>
+
 <body>
     <header>
-        <img src="images/profile-picture.webp" alt="A photo of me at the Utah Renaissance Faire" title="A photo of Trevor at the Utah Renaissance Faire">
-        <span>Trevor Hegstrom</span>
+        <span><h1>Red Rock City Chamber of Commerce</h1></span>
     </header>
     <div id="mode">
         🕶️
@@ -35,10 +35,10 @@
     <button id="menu" title="hamburger menu"></button>
     <nav class="navigation">
         <ul>
-            <li><a href="#" class="active">Home</a></li>
-            <li><a href="chamber/index.html">Chamber</a></li>
-            <li><a href="week01/chamber-site-plan.html">Site Plan</a></li>
-            <li><a href="#">Form</a></li>
+            <li><a href="index.html" class="active">Home</a></li>
+            <li><a href="#">Discover</a></li>
+            <li><a href="#">Directory</a></li>
+            <li><a href="#">Join</a></li>
         </ul>
         
     </nav>
