--- a/chamber/index.html
+++ b/chamber/index.html
@@ -31,13 +31,13 @@
     <nav class="navigation">
         <ul>
             <li><a href="#">Home</a></li>
-            <li><a href="#">Discover</a></li>
+            <li><a href="discover.html">Discover</a></li>
             <li><a href="#">Directory</a></li>
             <li><a href="#">Join</a></li>
         </ul>
     </nav>
     <main>
-        <img src="images/Dunnottar_Castle_2.jpg" alt="hero image">
+        <img src="images/Dunnottar_Castle_2.jpg" class="hero-image" alt="hero image">
         <h2 class="actionCall"><a href="#">Join the Chamber of Commerce</a></h2>
         <div class="sections">
             <section class="currentEvents">
