--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                     <li>Week 3 <a href="week03/images/landscape.webp">WebP</a></li>
                     <li>Week 3 <a href="week03/lazyload.html">Lazy Loading</a></li>
                     <li>Week 3 <a href="week03/responsive-images.html">Responsive Images</a></li>
+                    <li>Week 4 <a href="https://codepen.io/Trevor-Hegstrom/pen/XWvVWgy">Pseudo Classes</a></li>
+                    <li>Week 4 <a href="/week04/images/combinators-screenshot.jpg">Combinators</a></li>
                 </ul>
             </section>
             <section class="card">
