week 4 table build

--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                     <li>Week 3 <a href="week03/responsive-images.html">Responsive Images</a></li>
                     <li>Week 4 <a href="https://codepen.io/Trevor-Hegstrom/pen/XWvVWgy">Pseudo Classes</a></li>
                     <li>Week 4 <a href="/week04/images/combinators-screenshot.jpg">Combinators</a></li>
+                    <li>Week 4 <a href="week04/tablebuild.html">Tables</a></li>
                 </ul>
             </section>
             <section class="card">
