--- a/week04/tablebuild.html
+++ b/week04/tablebuild.html
@@ -7,6 +7,35 @@
     <link rel="stylesheet" href="styles/tablebuild.css">
 </head>
 <body>
-    
+    <table>
+        <tr>
+            <th colspan="4" scope="colgroup">ACME Wildwest Services</th>
+        </tr>
+        <tr>
+            <th scope="col"></th>
+            <th scope="col">Basic</th>
+            <th scope="col">Premium</th>
+            <th scope="col">Deluxe</th>
+        </tr>
+        <tr>
+            <th scope="row">Feature 1</th>
+            <td>✔️</td>
+            <td>✔️</td>
+            <td>✔️</td>
+        </tr>
+        <tr>
+            <th scope="row">Feature 2</th>
+            <td>❌</td>
+            <td>✔️</td>
+            <td>✔️</td>
+        </tr>
+        <tr>
+            <th scope="row">Feature 3</th>
+            <td>❌</td>
+            <td>❌</td>
+            <td>✔️</td>
+        </tr>
+        <caption>Table 1: Account Feature Comparison</caption>
+    </table>
 </body>
 </html>
