--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     <li>Week 4 <a href="https://codepen.io/Trevor-Hegstrom/pen/XWvVWgy">Pseudo Classes</a></li>
                     <li>Week 4 <a href="/week04/images/combinators-screenshot.jpg">Combinators</a></li>
                     <li>Week 4 <a href="week04/tablebuild.html">Tables</a></li>
+                    <li>Week 4 <a href="join.html">Project Milestone - Chamber Join Page</a></li>
                 </ul>
             </section>
             <section class="card">
