--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <li>Week 4 <a href="/week04/images/combinators-screenshot.jpg">Combinators</a></li>
                     <li>Week 4 <a href="week04/tablebuild.html">Tables</a></li>
                     <li>Week 4 <a href="join.html">Project Milestone - Chamber Join Page</a></li>
+                    <li>Week 5 <a href="https://codepen.io/Trevor-Hegstrom/pen/rNXdaLo?editors=1100">CSS Pseudo-elements</a></li>
                 </ul>
             </section>
             <section class="card">
