--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     <li>Week 4 <a href="week04/tablebuild.html">Tables</a></li>
                     <li>Week 4 <a href="join.html">Project Milestone - Chamber Join Page</a></li>
                     <li>Week 5 <a href="https://codepen.io/Trevor-Hegstrom/pen/rNXdaLo?editors=1100">CSS Pseudo-elements</a></li>
+                    <li>Week 5 <a href="week05/new-ward-members.json">JSON</a></li>
                 </ul>
             </section>
             <section class="card">
